--- a/_posts/2024-06-19-첫 포스트.md
+++ b/_posts/2024-06-19-첫 포스트.md
@@ -2,7 +2,17 @@
 title: 첫 포스트
 date: 2024-06-19 18:28:32 +09:00
 categories: [기타]
-tags: [Chirpy], [블로그 관리]
+tags: [Chirpy, 블로그 관리]
 ---
 
-첫 글이에여 안녕하세요!!
+**안녕하세요!! 첫 포스트입니다**
+  
+대학교 첫 종강을 맞이해서 방학 때 뭘 할까 하다가... ~~계절학기 들어야 되는데~~
+  
+공부와 프로젝트 기록용으로 블로그를 시작하려 합니다!
+  
+[Chirpy 테마](https://chirpy.cotes.page/)로 깃헙 블로그를 만들었습니다
+  
+처음에는 minimal mistakes 테마를 쓰려 했는데 이게 더 예뻐서 바꿨어요!
+  
+17일 월요일부터 시작해서 3일만에 겨우 설정 완료했네요... 열심히 블로그 운영해보겠습니다!!
