C++ 계획 포스팅

--- a/_posts/2024-06-19-첫 포스트.md
+++ b/_posts/2024-06-19-첫 포스트.md
@@ -5,7 +5,7 @@ categories: [기타, 블로그 관리]
 tags: [blogs, chirpy]
 ---
 
-### **안녕하세요!! 첫 포스트입니다**
+## **안녕하세요!! 첫 포스트입니다**
 
 대학교 첫 종강을 맞이해서 방학 때 뭘 할까 하다가... ~~계절학기 들어야 되는데~~
 
